tests/errors/error_display/test_hll_out_obligation_unfulfilled_display.si

        fn f(r: &out i64) {
        }
    