tests/errors/error_display/test_hll_out_obligation_unfulfilled_display.err.expected
error: at 2:27: [INIT-RefObligationUnfulfilled] In function 'f': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 2 |         fn f(r: &out i64) {
   |                           ^
